# securefile

./: .gitignore  CMakeLists.txt  README.md
data/: data.sql
mac_build-release/Release/: data.sql  securefile
src/: main.cpp
src/core/: create_account.cpp  decrypt.cpp  encrypt.cpp  encrypt.h  login.h  share_file.cpp  share_file.h  update_password.cpp  update_password.h
src/core/auth/: auth.cpp  auth.h  create_account.cpp  create_account.h  login.cpp  login.h  update_password.cpp  update_password.h
src/core/file_management/: decrypt.cpp  decrypt.h  delete_file.cpp  delete_file.h  encrypt.cpp  encrypt.h  file_management.cpp  file_management.h  share_file.cpp  share_file.h
src/core/report_management/: report_management.cpp  report_management.h
src/core/user_management/: delete_account.cpp  delete_account.h  user_manager.cpp  user_manager.h
src/models/: encrypted_file.cpp  encrypted_file.h  metadata_file.cpp  metadata_file.h  report.cpp  report.h  session.cpp  session.h  shared_file.cpp  shared_file.h  user.cpp  user.h
src/services/: database.cpp  database.h  encrypt.cpp  encrypt.h  file.cpp  file.h
src/ui/: ui.cpp  ui.h
test/: test_services.cpp
win_build_release/Release/: data_backup.sql
